Bug 218223: Long tooltips should wrap instead of cropping text, based on original SeaMonkey patch by Chris Thomas <cstyecc.com>, Firefox patch by shaver, r=me
UltraBlame original commit: 9f1275cbe974734db773f0defced0b69645bdb79

--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -151,3 +151,52 @@ right
 important
 ;
 }
+/
+*
+:
+:
+:
+:
+:
+Tooltips
+(
+multi
+-
+line
+)
+from
+content
+:
+:
+:
+:
+:
+*
+/
+.
+htmltooltip
+-
+label
+{
+max
+-
+width
+:
+40em
+;
+margin
+:
+0
+;
+white
+-
+space
+:
+-
+moz
+-
+pre
+-
+wrap
+;
+}
