--- a/browser/themes/pinstripe/browser/browser.css
+++ b/browser/themes/pinstripe/browser/browser.css
@@ -10884,3 +10884,52 @@ ThreeDHighlight
 important
 ;
 }
+/
+*
+:
+:
+:
+:
+:
+Tooltips
+(
+multi
+-
+line
+)
+from
+content
+:
+:
+:
+:
+:
+*
+/
+.
+htmltooltip
+-
+label
+{
+max
+-
+width
+:
+40em
+;
+margin
+:
+0
+;
+white
+-
+space
+:
+-
+moz
+-
+pre
+-
+wrap
+;
+}
